--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "Abhay",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.1",
-    "mongoose": "^4.11.14"
+    "express-session": "^1.15.6",
+    "mongoose": "^4.11.14",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
